--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,7 @@
 spring.application.name=weekone
 deploy.env=development
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:file:C:/Users/supre/Desktop/springbootemployeedb/db
+spring.datasource.username=supreet
+spring.datasource.password=supreet
+spring.jpa.hibernate.ddl-auto=update
